<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/custo_do_servico"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/custo_do_servi_o"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questao_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_foi_o_servi_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custo_do_servico" />

    <RadioGroup
        android:id="@+id/opcao_gorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/vinte_porcento"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questao_servico">

        <RadioButton
            android:id="@+id/vinte_porcento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surpreendente_20" />

        <RadioButton
            android:id="@+id/dezoito_porcento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_18" />

        <RadioButton
            android:id="@+id/quinze_porcento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15" />

    </RadioGroup>

    <Switch
        android:id="@+id/arredondar_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/arredondar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opcao_gorjeta" />

    <Button
        android:id="@+id/botao_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arredondar_switch" />

    <TextView
        android:id="@+id/resultado_gorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="valor da gorjeta: R$10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botao_calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>

